--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap");
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(92.24deg, #cde4c5 5.59%, #faebc4 93.42%);
+
+
 }
 
 code {
@@ -18,6 +18,8 @@ code {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "lexend deca", sans-serif;
+
 }
 
 
@@ -26,9 +28,9 @@ code {
   margin: 30px auto;
   overflow: auto;
   min-height: 300px;
-  border: 1px solid steelblue;
+  border: 1px solid black;
   padding: 30px;
-  border-radius: 5px;
+  border-radius:10px;
 }
 
 .header {
@@ -41,6 +43,7 @@ h1{
 font-size: 25px;
 padding-left: 20px;
 }
+
 .btn {
   display: inline-block;
   background: #000;
@@ -103,6 +106,7 @@ padding-left: 20px;
   margin: 5px;
   padding: 3px 7px;
   font-size: 17px;
+
 }
 
 .form-control-check {
@@ -119,15 +123,7 @@ padding-left: 20px;
   flex: 2;
   height: 20px;
 }
-.headerImg {
-  height: 23px;
-  width: 23px;
-  padding: 0;
-  margin: 0;
-  position: absolute;
-  top: 11.5%;
-  left: 33.3%;
-}
+
 
 footer {
   margin-top: 30px;
