--- a/src/index.css
+++ b/src/index.css
@@ -32,13 +32,44 @@ code {
   padding: 30px;
   border-radius:10px;
 }
+@media (max-width: 768px){
+
+  .container {
+    max-width: 300px;
+    margin: 30px auto;
+    overflow: auto;
+    height: 700px;
+    border: 1px solid black;
+    padding: 30px;
+    border-radius:10px;
+  }
+h1 {
+  font-size: 17px !important;
+  }
+
+body {
+  font-size: 13px;
+}
+.form-control label{
+margin-left: 10px;
+}
+
+.form-control input {
+  font-size: 13px !important;
+
+
+}
+
+}
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
+  gap: 10px;
 }
+
 h1{
 font-size: 25px;
 padding-left: 20px;
@@ -78,9 +109,7 @@ padding-left: 20px;
   cursor: pointer;
 }
 
-.task.reminder {
-  border-left: 5px solid green;
-}
+
 
 .task h3 {
   display: flex;
@@ -115,17 +144,5 @@ padding-left: 20px;
   justify-content: space-between;
 }
 
-.form-control-check label {
-  flex: 1;
-}
-
-.form-control-check input {
-  flex: 2;
-  height: 20px;
-}
 
 
-footer {
-  margin-top: 30px;
-  text-align: center;
-}
